<resources>
    <string name="app_name">Currency exchange</string>
    <string name="balances_title">My balances</string>
    <string name="exchange_title">Currency exchange</string>
    <string name="sell">Sell</string>
    <string name="receive">Receive</string>
    <string name="submit">Submit</string>
    <string name="fee_not_applicable">FREE</string>
    <string name="fee_label">Conversion fee</string>
    <string name="success_alert_title">Currency converted</string>
    <string name="button_done">Done</string>
    <string name="conversion_result_message_with_fee">You have converted %1$s to %2$s. Commission Fee - %3$s.</string>
    <string name="conversion_result_message">You have converted %1$s to %2$s.</string>
    <string name="conversion_rate_label">Buy rate</string>
    <string name="conversion_rate_value">%1$s 1 = %2$s</string>
    <string name="insufficient_balance">Insufficient funds</string>
    <string name="api_connection_error">Currencies rates loading failed.</string>
    <string name="balance_value">Balance: %1$s %2$s</string>
</resources>