<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/exchange_content_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/exchange_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_2x"
            android:layout_marginTop="@dimen/margin_2x"
            android:text="@string/exchange_title"
            android:textSize="@dimen/header_text_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/exchange_sell_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_2x"
            android:layout_marginTop="@dimen/margin_2x"
            android:elevation="@dimen/card_elevation"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/card_radius"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/exchange_title">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Spinner
                    android:id="@+id/exchange_sell_currency_selector"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_1x"
                    android:layout_marginTop="@dimen/margin_1x"
                    app:layout_constraintBottom_toTopOf="@+id/exchange_sell_balance"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/exchange_sell_balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_2x"
                    android:textSize="@dimen/smaller_text_size"
                    app:layout_constraintBaseline_toBaselineOf="@+id/exchange_insufficient_balance_error"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/exchange_sell_currency_selector" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/exchange_sell_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_2x"
                    android:gravity="end"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal"
                    android:textColor="@color/black"
                    app:layout_constraintBaseline_toBaselineOf="@+id/exchange_sell_currency_selector"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1"
                    app:layout_constraintStart_toEndOf="@+id/exchange_sell_currency_selector" />

                <TextView
                    android:id="@+id/exchange_insufficient_balance_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_2x"
                    android:layout_marginBottom="@dimen/margin_2x"
                    android:text="@string/insufficient_balance"
                    android:textColor="@color/red_error"
                    android:textSize="@dimen/smaller_text_size"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/exchange_sell_input"
                    tools:visibility="visible" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/exchange_receive_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_2x"
            android:layout_marginTop="@dimen/margin_2x"
            android:elevation="@dimen/card_elevation"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/card_radius"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/exchange_sell_card">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Spinner
                    android:id="@+id/exchange_receive_currency_selector"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/margin_3x"
                    android:layout_marginStart="@dimen/margin_1x"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/exchange_receive_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_2x"
                    android:textColor="@color/green"
                    android:textSize="@dimen/receive_amount_text_size"
                    app:layout_constraintBaseline_toBaselineOf="@+id/exchange_receive_currency_selector"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/exchange_receive_currency_selector"
                    tools:text="0" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="@dimen/above_card_elevation"
            android:rotation="90"
            android:src="@drawable/ic_green_arrow"
            app:layout_constraintBottom_toTopOf="@+id/exchange_receive_card"
            app:layout_constraintEnd_toEndOf="@id/exchange_sell_card"
            app:layout_constraintStart_toStartOf="@id/exchange_sell_card"
            app:layout_constraintTop_toBottomOf="@+id/exchange_sell_card"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/exchange_conversion_rate_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_2x"
            android:layout_marginTop="@dimen/margin_2x"
            android:text="@string/conversion_rate_label"
            android:textSize="@dimen/smaller_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/exchange_receive_card" />

        <TextView
            android:id="@+id/exchange_conversion_rate_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_2x"
            android:textSize="@dimen/smaller_text_size"
            app:layout_constraintBaseline_toBaselineOf="@+id/exchange_conversion_rate_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/exchange_conversion_rate_title"
            tools:text="0" />

        <TextView
            android:id="@+id/exchange_fee_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_2x"
            android:layout_marginTop="@dimen/margin_1x"
            android:text="@string/fee_label"
            android:textSize="@dimen/smaller_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/exchange_conversion_rate_title" />

        <TextView
            android:id="@+id/exchange_fee_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_2x"
            android:textSize="@dimen/smaller_text_size"
            app:layout_constraintBaseline_toBaselineOf="@+id/exchange_fee_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/exchange_fee_title"
            tools:text="0" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/exchange_fee_group"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:constraint_referenced_ids="exchange_fee_title,exchange_fee_value" />

        <TextView
            android:id="@+id/exchange_balances_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_2x"
            android:layout_marginTop="@dimen/margin_3x"
            android:text="@string/balances_title"
            android:textSize="@dimen/header_text_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/exchange_fee_title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/exchange_accounts_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_1x"
            android:background="@color/white"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbars="vertical"
            app:layout_constraintHeight_max="@dimen/accounts_recycler_max_height"
            app:layout_constraintTop_toBottomOf="@id/exchange_balances_title" />

        <Button
            android:id="@+id/exchange_confirm_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/submit_btn_margin"
            android:layout_marginBottom="@dimen/submit_btn_margin"
            android:text="@string/submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/exchange_accounts_recycler"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/exchange_loading_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />
</FrameLayout>